--- a/valuetransfer/src/main/res/layout/item_contacts_chat_detail.xml
+++ b/valuetransfer/src/main/res/layout/item_contacts_chat_detail.xml
@@ -651,6 +651,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="8dp"
                     android:textColor="@color/white"
+                    android:visibility="gone"
+                    tools:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/ivAttachmentTransferRequestContinueIcon"
                     app:layout_constraintStart_toEndOf="@+id/ivAttachmentTransferRequestIcon"
