--- a/valuetransfer/src/main/res/layout/action_bar.xml
+++ b/valuetransfer/src/main/res/layout/action_bar.xml
@@ -13,7 +13,6 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginVertical="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:cardElevation="0dp"
         app:cardCornerRadius="@dimen/cornerRadius"
@@ -58,7 +57,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Title"
-            app:drawableTint="?attr/colorAccent"
             android:drawablePadding="4dp" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -68,93 +66,8 @@
             android:layout_height="wrap_content"
             android:visibility="gone"
             tools:visibility="visible"
-            tools:text="Subtitle" />
+            android:drawablePadding="4dp"
+            tools:text="Connect with IPv8" />
 
     </LinearLayout>
 </LinearLayout>
-
-
-<!--    <?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout-->
-<!--android:id="@+id/rlActionBar"-->
-<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--xmlns:tools="http://schemas.android.com/tools"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--android:orientation="vertical">-->
-
-<!--<androidx.appcompat.widget.AppCompatTextView-->
-<!--    android:id="@+id/tv_actionbar_title"-->
-<!--    style="@style/ActionBarTitleStyle"-->
-<!--    android:layout_width="wrap_content"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    tools:text="Title"-->
-<!--    />-->
-
-<!--<androidx.constraintlayout.widget.ConstraintLayout-->
-<!--    android:layout_width="wrap_content"-->
-<!--    android:layout_height="wrap_content">-->
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/rlVerificationStatus"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:paddingEnd="8dp"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/llOnlineStatus">-->
-<!--        <ImageView-->
-<!--            android:id="@+id/ivVerified"-->
-<!--            android:layout_width="15dp"-->
-<!--            android:layout_height="15dp"-->
-<!--            android:layout_marginEnd="4dp"-->
-<!--            android:src="@drawable/ic_verified"-->
-<!--            app:tint="?attr/colorAccent"-->
-<!--            android:layout_gravity="center_vertical"/>-->
-
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:text="Verified"/>-->
-
-<!--    </LinearLayout>-->
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/llOnlineStatus"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/rlVerificationStatus"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
-
-<!--        <androidx.appcompat.widget.AppCompatTextView-->
-<!--            android:id="@+id/tv_actionbar_subtitle"-->
-<!--            style="@style/ActionBarSubTitleStyle"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-
-<!--            android:visibility="gone"-->
-<!--            tools:visibility="visible"-->
-<!--            tools:text="Subtitle"/>-->
-
-<!--    </LinearLayout>-->
-
-<!--    &lt;!&ndash;        <FrameLayout&ndash;&gt;-->
-<!--    &lt;!&ndash;            android:id="@+id/flVerified"&ndash;&gt;-->
-<!--    &lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
-<!--    &lt;!&ndash;            android:layout_height="15dp"&ndash;&gt;-->
-<!--    &lt;!&ndash;            android:paddingEnd="12dp"&ndash;&gt;-->
-<!--    &lt;!&ndash;            android:layout_marginStart="8dp"&ndash;&gt;-->
-<!--    &lt;!&ndash;            app:layout_constraintTop_toTopOf="@+id/tv_actionbar_title"&ndash;&gt;-->
-<!--    &lt;!&ndash;            app:layout_constraintStart_toEndOf="@+id/tv_actionbar_title"&ndash;&gt;-->
-<!--    &lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-<!--    &lt;!&ndash;            app:layout_constraintBottom_toBottomOf="@+id/tv_actionbar_title">&ndash;&gt;-->
-
-<!--    &lt;!&ndash;        &ndash;&gt;-->
-<!--    &lt;!&ndash;        </FrameLayout>&ndash;&gt;-->
-
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
-
-
-
-<!--</LinearLayout>-->
