--- a/valuetransfer/src/main/res/layout/fragment_settings.xml
+++ b/valuetransfer/src/main/res/layout/fragment_settings.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="?attr/backgroundColor">
 
@@ -18,9 +18,7 @@
             style="@style/FragmentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text_general"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/text_general" />
 
         <LinearLayout
             android:id="@+id/clThemeSelector"
@@ -196,9 +194,7 @@
                 style="@style/FragmentTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/menu_navigation_identity"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:text="@string/menu_navigation_identity" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -293,43 +289,7 @@
             style="@style/FragmentTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text_about_app"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="12dp"
-            android:layout_marginTop="8dp"
-            android:paddingHorizontal="12dp"
-            android:paddingVertical="8dp"
-            android:orientation="horizontal"
-            android:background="@drawable/pill_rounded"
-            android:backgroundTint="?attr/widgetColor"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/text_GDPR"
-                android:textColor="?attr/onWidgetColor"
-                android:textStyle="bold" />
-
-            <Space
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1" />
-
-            <ImageView
-                android:id="@+id/ivGoToGDPR"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:padding="4dp"
-                app:tint="?attr/onWidgetSecondaryColor"
-                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
-
-        </LinearLayout>
+            android:text="@string/text_about_app" />
 
         <LinearLayout
             android:layout_width="match_parent"
