--- a/valuetransfer/src/main/res/values/styles.xml
+++ b/valuetransfer/src/main/res/values/styles.xml
@@ -177,4 +177,11 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    // Divider
+    <style name="Divider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
+    </style>
 </resources>
