--- a/valuetransfer/src/main/res/layout/item_contact_chat_media_gallery.xml
+++ b/valuetransfer/src/main/res/layout/item_contact_chat_media_gallery.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
-        android:background="@color/light_gray"
+        android:background="?attr/widgetColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="w,1:1"
         app:layout_constraintEnd_toEndOf="parent"
