--- a/valuetransfer/src/main/res/layout/dialog_identity_details.xml
+++ b/valuetransfer/src/main/res/layout/dialog_identity_details.xml
@@ -296,6 +296,7 @@
                     android:id="@+id/btnGenderGroup"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    app:selectionRequired="true"
                     app:singleSelection="true"
                     android:weightSum="2">
 
