--- a/valuetransfer/src/main/res/layout/dialog_exchange_transaction.xml
+++ b/valuetransfer/src/main/res/layout/dialog_exchange_transaction.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="12dp"
     android:paddingBottom="12dp"
     android:orientation="vertical"
     android:background="@drawable/dialog_rounded_top"
@@ -20,6 +19,7 @@
         style="@style/DialogTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginTop="8dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/dialog_title_exchange_transaction" />
@@ -28,6 +28,7 @@
         android:id="@+id/llTransactionAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
@@ -59,6 +60,7 @@
         android:id="@+id/tvTransactionType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginTop="4dp"
         tools:text="@string/text_exchange_buy"
         android:textColor="?attr/mutedColor"
@@ -68,6 +70,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginTop="8dp"
         android:paddingVertical="8dp"
         android:paddingHorizontal="12dp"
@@ -248,6 +251,7 @@
         android:id="@+id/clTransactionSignButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/pill_rounded"
         android:backgroundTint="?attr/colorError"
@@ -274,6 +278,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
         android:background="@drawable/square_rounded">
@@ -450,34 +455,25 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llOptionsBig"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="8dp">
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:weightSum="2"
+        android:layout_marginEnd="12dp"
+        android:paddingBottom="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle">
 
-        <TextView
-            android:id="@+id/tvViewChat"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:paddingVertical="8dp"
-            android:layout_weight="1"
-            android:layout_marginEnd="4dp"
-            android:text="View Chat"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:background="@drawable/square_rounded"/>
+        <include android:id="@+id/tvViewChat"
+            layout="@layout/item_option_big"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
-        <TextView
-            android:id="@+id/tvViewContact"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:paddingVertical="8dp"
-            android:layout_weight="1"
-            android:layout_marginStart="4dp"
-            android:text="View Contact"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:background="@drawable/square_rounded"/>
-
+        <include android:id="@+id/tvViewContact"
+            layout="@layout/item_option_big"
+            android:visibility="gone"
+            tools:visibility="visible" />
     </LinearLayout>
 </LinearLayout>
