--- a/valuetransfer/src/main/res/drawable/ic_chat.xml
+++ b/valuetransfer/src/main/res/drawable/ic_chat.xml
@@ -5,9 +5,8 @@
     android:viewportHeight="1000"
     android:tint="?attr/colorControlNormal">
     <path
-        android:pathData="M365,95l-82.4,90H140c-49.5,0 -90,40.5 -90,90v540c0,49.5 40.5,90 90,90h720c49.5,0 90,-40.5 90,-90V275c0,-49.5 -40.5,-90 -90,-90H717.3L635,95H365zM500,770c-124.2,0 -225,-100.8 -225,-225s100.8,-225 225,-225s225,100.8 225,225S624.2,770 500,770z"
-        android:strokeLineJoin="round"
-        android:strokeWidth="48"
+        android:pathData="M875,463.1c0,148.4 -167.9,268.5 -375,268.5c-59.1,0 -115.1,-9.8 -164.8,-27.3c-22.2,-7.9 -120.9,111.2 -140.4,100.5c-19.9,-10.8 39.3,-151.7 22.7,-165.2C159.9,592.4 125,530.6 125,463c0,-148.4 167.9,-268.5 375,-268.5S875,314.8 875,463.1z"
+        android:strokeWidth="48.3739"
         android:fillColor="#00000000"
         android:strokeColor="@android:color/white"/>
 </vector>
