--- a/valuetransfer/src/main/res/layout/item_contacts_chat_detail.xml
+++ b/valuetransfer/src/main/res/layout/item_contacts_chat_detail.xml
@@ -83,11 +83,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="?attr/mutedDarkColor"
+            android:backgroundTint="@color/colorOrange"
             android:gravity="center"
             android:paddingHorizontal="8dp"
             android:paddingVertical="4dp"
-            android:textColor="@color/colorYellow"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
