--- a/valuetransfer/src/main/res/layout/item_contacts_chat_detail.xml
+++ b/valuetransfer/src/main/res/layout/item_contacts_chat_detail.xml
@@ -299,7 +299,6 @@
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="12dp"
                 android:visibility="gone"
-                tools:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvChatMessage">
 
@@ -349,6 +348,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:visibility="gone"
+                tools:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvChatMessage">
 
@@ -377,9 +377,8 @@
 
                     <ProgressBar
                         android:id="@+id/pbAttachmentProgressLoadingSpinner"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
-                        android:padding="30dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:min="0"
                         android:max="100"
                         android:progress="0"
@@ -399,6 +398,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="0dp"
                         android:layout_gravity="center"
+                        android:layout_marginBottom="12dp"
                         android:gravity="center"
                         android:textSize="12sp"
                         tools:text="20%"
@@ -408,7 +408,31 @@
                         app:layout_constraintDimensionRatio="H,1:1"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@+id/pbAttachmentProgressLoadingSpinner" />
+
+                    <ImageView
+                        android:id="@+id/ivAttachmentProgressStop"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/ic_baseline_stop_circle_24"
+                        app:tint="@color/colorPrimaryValueTransfer"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
+
+                    <ImageView
+                        android:id="@+id/ivAttachmentProgressPlay"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/ic_baseline_play_circle_filled_24"
+                        app:tint="@color/colorPrimaryValueTransfer"
+                        android:visibility="gone"
+                        tools:visibility="visible"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
