--- a/musicdao/src/main/res/menu/menu_searchable.xml
+++ b/musicdao/src/main/res/menu/menu_searchable.xml
@@ -17,7 +17,12 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/ic_baseline_search_24"
+        android:icon="@drawable/ic_baseline_settings_24"
         android:title="@string/search_hint"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_settings"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="@string/settings"
         app:showAsAction="ifRoom" />
 </menu>
