--- a/musicdao/src/main/res/navigation/musicdao_navgraph.xml
+++ b/musicdao/src/main/res/navigation/musicdao_navgraph.xml
@@ -31,15 +31,22 @@
                 android:name="torrentInfoName"
                 app:argType="string" />
         </action>
+        <action
+            android:id="@+id/action_playlistsOverviewFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/playlistFragment"
         android:name="com.example.musicdao.playlist.PlaylistFragment"
-        android:label="Playlist"></fragment>
+        android:label="Playlist" />
 
     <fragment
         android:id="@+id/walletFragment"
         android:name="com.example.musicdao.wallet.WalletFragment"
-        android:label="Wallet overview"></fragment>
+        android:label="Wallet overview" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.musicdao.ui.settings.SettingsFragment"
+        android:label="SettingsFragment" />
 </navigation>
