--- a/valuetransfer/src/main/res/layout/dialog_exchange_transaction.xml
+++ b/valuetransfer/src/main/res/layout/dialog_exchange_transaction.xml
@@ -248,6 +248,34 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clTransactionResendButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="12dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/pill_rounded"
+        android:backgroundTint="?attr/colorError"
+        android:paddingHorizontal="12dp"
+        android:paddingVertical="8dp"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/tvTransactionResendButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingHorizontal="4dp"
+            android:text="@string/btn_transaction_resend"
+            android:textColor="?attr/colorOnError"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clTransactionSignButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
