--- a/data-vault/src/main/res/layout/vault_browser_fragment.xml
+++ b/data-vault/src/main/res/layout/vault_browser_fragment.xml
@@ -10,9 +10,117 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <!--
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/lowerContainer"/>
+    -->
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/action_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/metallic_gold"
+        android:src="@drawable/ic_round_bolt_24"
+        app:backgroundTint="#000000"
+        app:borderWidth="0dp"
+        app:fabCustomSize="70dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:maxImageSize="50dp"
+        app:tint="@color/white" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/request_accessible_files_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="@android:color/holo_red_dark"
+        app:borderWidth="0dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toTopOf="@id/action_fab"
+        app:layout_constraintEnd_toEndOf="@id/action_fab"
+        app:layout_constraintStart_toStartOf="@id/action_fab"
+        app:srcCompat="@drawable/ic_swap_horiz_black_16dp"
+        app:tint="@color/white" />
+
+    <TextView
+        android:id="@+id/request_accessible_files_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_corners"
+        android:padding="5dp"
+        android:text="Request accessible files"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@id/request_accessible_files_fab"
+        app:layout_constraintEnd_toStartOf="@id/request_accessible_files_fab"
+        app:layout_constraintTop_toTopOf="@id/request_accessible_files_fab" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/delete_files_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="@android:color/holo_red_dark"
+        app:borderWidth="0dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toTopOf="@id/request_accessible_files_fab"
+        app:layout_constraintEnd_toEndOf="@id/request_accessible_files_fab"
+        app:layout_constraintStart_toStartOf="@id/request_accessible_files_fab"
+        app:srcCompat="@drawable/ic_round_delete_forever_24"
+        app:tint="@color/white" />
+
+    <TextView
+        android:id="@+id/delete_files_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_corners"
+        android:padding="5dp"
+        android:text="Delete files"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@id/delete_files_fab"
+        app:layout_constraintEnd_toStartOf="@id/delete_files_fab"
+        app:layout_constraintTop_toTopOf="@id/delete_files_fab" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_file_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:backgroundTint="@android:color/holo_red_dark"
+        app:borderWidth="0dp"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toTopOf="@id/delete_files_fab"
+        app:layout_constraintEnd_toEndOf="@id/delete_files_fab"
+        app:layout_constraintStart_toStartOf="@id/delete_files_fab"
+        app:srcCompat="@drawable/ic_round_storage_24"
+        app:tint="@color/white" />
+
+    <TextView
+        android:id="@+id/add_file_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/rounded_corners"
+        android:padding="5dp"
+        android:text="Add file"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@id/add_file_fab"
+        app:layout_constraintEnd_toStartOf="@id/add_file_fab"
+        app:layout_constraintTop_toTopOf="@id/add_file_fab" />
+
+    <!--
 
     <LinearLayout
         android:id="@+id/lowerContainer"
@@ -28,7 +136,16 @@
             android:layout_margin="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Request test file"
+            android:text="Request"
+            android:textColor="@color/black"/>
+
+        <Button
+            android:id="@+id/createButton"
+            style="@style/ButtonDarkGreenRounded"
+            android:layout_margin="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create"
             android:textColor="@color/black"/>
 
         <TextView
@@ -41,7 +158,6 @@
             android:text="Status"
             android:textColor="@color/black"/>
     </LinearLayout>
-
-
+    -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
