Change code to be more UI independent and move app to compose

--- a/musicdao/src/main/res/layout/fragment_base.xml
+++ b/musicdao/src/main/res/layout/fragment_base.xml
@@ -21,12 +21,22 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/musicdao_navgraph" />
 
-        <fragment
-            android:id="@+id/track_player_fragment"
-            class="com.example.musicdao.player.AudioPlayer"
+        <!--        <fragment-->
+        <!--            android:id="@+id/track_player_fragment"-->
+        <!--            class="com.example.musicdao.player.AudioPlayer"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content" />-->
+
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:menu="@menu/bottom_navigation_menu" />
+
     </LinearLayout>
 
 
 </FrameLayout>
+
+
