--- a/musicdao/src/main/res/layout/track_row.xml
+++ b/musicdao/src/main/res/layout/track_row.xml
@@ -26,8 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/trackTitle"
             android:layout_marginLeft="20dp"
-            android:text="The Smithies"
-            android:textColor="@color/musicColorAccent" />
+            android:text="The Smithies" />
     </RelativeLayout>
 
     <TextView
