--- a/musicdao/src/main/res/layout/fragment_recommendation.xml
+++ b/musicdao/src/main/res/layout/fragment_recommendation.xml
@@ -2,7 +2,6 @@
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorPrimaryPlayer"
     android:id="@+id/refreshRecommend"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -18,7 +17,6 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:gravity="center"
-            android:text="Refresh to get recommendations"
-            android:textColor="@color/white" />
+            android:text="Refresh to get recommendations" />
     </com.google.android.flexbox.FlexboxLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
