--- a/musicdao/src/main/res/layout/fragment_release.xml
+++ b/musicdao/src/main/res/layout/fragment_release.xml
@@ -1,42 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingHorizontal="@dimen/fab_margin">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/debugTextRelease"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/blockMetadata"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@color/white" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
-    <Button
-        android:id="@+id/tipButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/musicColorAccent"
-        android:text="Tip this artist/band"
-        android:visibility="gone" />
+        <ImageView
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@color/dark_gray"
+            android:src="@drawable/ic_music" />
 
-    <TableLayout
-        android:id="@+id/release_table_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></TableLayout>
+        <TextView
+            android:id="@+id/blockMetadata"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:layout_marginBottom="10dp"/>
 
-    <TextView
-        android:id="@+id/loadingTracks"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Searching metadata from peers..."
-        android:textColor="@color/white" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Artist Name"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+
+        <Button
+            android:id="@+id/tipButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tip this artist/band"
+            android:visibility="gone" />
+
+        <TableLayout
+            android:id="@+id/release_table_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></TableLayout>
+
+        <TextView
+            android:id="@+id/loadingTracks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Searching metadata from peers..." />
+    </LinearLayout>
 </LinearLayout>
