--- a/musicdao/src/main/res/layout/fragment_release_cover.xml
+++ b/musicdao/src/main/res/layout/fragment_release_cover.xml
@@ -25,32 +25,46 @@
                 android:layout_width="140dp"
                 android:layout_height="140dp"
                 android:background="@color/dark_gray"
-                android:src="@drawable/ic_music" />
+                android:src="@drawable/ic_music"
+                android:layout_marginBottom="4dp"/>
 
-            <TextView
-                android:id="@+id/coverTitle"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:text="Album title"
-                android:textColor="@color/white"
-                android:textSize="14dp" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/coverArtists"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Artist1, artist2"
-                android:textColor="@color/mild_gray"
-                android:textSize="12dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/seedCount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Seeders: "
-                android:textColor="@color/musicColorAccent"
-                android:textSize="12dp" />
+                    <TextView
+                        android:id="@+id/coverTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+
+                    <TextView
+                        android:id="@+id/coverArtists"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+                        android:textColor="@color/mild_gray" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/seedCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
+            </LinearLayout>
+
+
         </LinearLayout>
 
     </RelativeLayout>
