--- a/musicdao/src/main/res/layout/fragment_release_overview.xml
+++ b/musicdao/src/main/res/layout/fragment_release_overview.xml
@@ -2,81 +2,78 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimaryPlayer"
-    android:orientation="vertical"
-    android:paddingHorizontal="@dimen/fab_margin"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/debugText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/recTitle"
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:textColor="@color/white"
-        android:text="Recommendations"/>
+    <!--    <TextView-->
+    <!--        android:id="@+id/recTitle"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="20dp"-->
+    <!--        android:text="Recommendations"/>-->
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/recommendationsFragment"
-        android:name="com.example.musicdao.catalog.RecommendationFragment"
-        android:label="Recommendations"
-        android:layout_width="match_parent"
-        android:layout_height="230dp"/>
+    <!--    <androidx.fragment.app.FragmentContainerView-->
+    <!--        android:id="@+id/recommendationsFragment"-->
+    <!--        android:name="com.example.musicdao.catalog.RecommendationFragment"-->
+    <!--        android:label="Recommendations"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="230dp"/>-->
 
     <TextView
         android:id="@+id/catTitle"
-        android:layout_width="match_parent"
-        android:layout_height="21dp"
-        android:textColor="@color/white"
-        android:text="Catalog" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Explore"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
+    <TextView
+        android:id="@+id/loadingReleases"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="No music playlists found from peers." />
+
+    <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="wrap_content">
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefresh"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ScrollView
+                android:id="@+id/release_overview_scroll_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/release_overview_layout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:flexWrap="wrap"
+                    app:justifyContent="space_evenly" />
+
+            </ScrollView>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    </LinearLayout>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addPlaylistFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_gravity="end|bottom"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:contentDescription="@string/add_playlist"
         android:elevation="10dp"
-        android:src="@drawable/ic_baseline_add_24"
-        app:rippleColor="@color/white" />
+        android:src="@drawable/ic_baseline_add_24" />
 
-    <TextView
-        android:id="@+id/loadingReleases"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="No music playlists found from peers"
-        android:textColor="@color/white" />
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefresh"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ScrollView
-            android:id="@+id/release_overview_scroll_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <com.google.android.flexbox.FlexboxLayout
-                android:id="@+id/release_overview_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:flexWrap="wrap"
-                app:justifyContent="space_evenly">
-            </com.google.android.flexbox.FlexboxLayout>
-        </ScrollView>
-
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
