--- a/musicdao/src/main/res/layout/fragment_wallet.xml
+++ b/musicdao/src/main/res/layout/fragment_wallet.xml
@@ -2,21 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="409dp"
     android:layout_height="729dp"
-    android:background="@color/bgColor"
     android:orientation="vertical"
     android:padding="@dimen/fab_margin">
 
     <TextView
         android:id="@+id/wallet_status"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/wallet_status_2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white" />
+        android:layout_height="wrap_content" />
 
     <ProgressBar
         android:id="@+id/blockchain_progress"
@@ -29,13 +26,11 @@
         android:id="@+id/wallet_public_key"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wallet public key: "
-        android:textColor="@color/white" />
+        android:text="Wallet public key: " />
 
     <TextView
         android:id="@+id/wallet_balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Wallet balance: "
-        android:textColor="@color/white" />
+        android:text="Wallet balance: " />
 </LinearLayout>
