--- a/musicdao/src/main/res/layout/track_table_row.xml
+++ b/musicdao/src/main/res/layout/track_table_row.xml
@@ -16,7 +16,6 @@
         android:gravity="center"
         android:minWidth="25dp"
         android:text="12."
-        android:textColor="@color/white"
         android:textSize="20sp" />
 
     <RelativeLayout
@@ -30,7 +29,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="djl a n g 59_-_Odinary_People_(_Orgdinary_Mix_)_Pomber_on_vocals.mp3"
-            android:textColor="@color/white"
             android:textSize="16sp" />
 
         <TextView
@@ -38,8 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/trackTitle"
-            android:text="The Smithies"
-            android:textColor="@color/musicColorAccent" />
+            android:text="The Smithies" />
     </RelativeLayout>
 
     <RelativeLayout
