--- a/musicdao/src/main/res/menu/menu_add_playlist.xml
+++ b/musicdao/src/main/res/menu/menu_add_playlist.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".MusicService">
+    tools:context=".MusicActivity">
     <item
         android:id="@+id/action_1"
         android:title="Action 1"
