--- a/musicdao/src/main/res/menu/menu_searchable.xml
+++ b/musicdao/src/main/res/menu/menu_searchable.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".MusicService">
+    tools:context=".MusicActivity">
     <item
         android:id="@+id/action_debug"
         android:icon="@drawable/ic_baseline_bar_chart_24"
@@ -17,12 +17,7 @@
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/ic_baseline_settings_24"
-        android:title="@string/search_hint"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_settings"
         android:icon="@drawable/ic_baseline_search_24"
-        android:title="@string/settings"
+        android:title="@string/search_hint"
         app:showAsAction="ifRoom" />
 </menu>
