--- a/data-vault/src/main/res/layout/access_control_management_fragment.xml
+++ b/data-vault/src/main/res/layout/access_control_management_fragment.xml
@@ -18,7 +18,7 @@
             android:text="Filename.jpg"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:textSize="20sp"/>
+            android:textSize="15sp"/>
 
         <LinearLayout
             android:id="@+id/metadataLayout"
@@ -73,9 +73,17 @@
                 android:layout_height="wrap_content"
                 android:text="more"/>
         </LinearLayout>
+
+        <Button
+            android:id="@+id/addPolicyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Add Policy"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+   <!-- <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/policyEditorHeader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -89,20 +97,12 @@
             android:textSize="15sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"/>
-
-        <Button
-            android:id="@+id/addPolicyButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:text="+"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/policyEditorHeader"
+        app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintBottom_toTopOf="@id/buttonPanel"
         android:padding="10dp">
 
@@ -111,14 +111,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TV 1"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"/>
-
         </LinearLayout>
     </ScrollView>
 
